--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,7 @@
       android:versionCode="1"
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="10" />
-
+	<uses-permission android:name="android.permission.VIBRATE"/>
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".MemoryCoconutActivity"
                   android:label="@string/app_name"
