--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,14 +6,17 @@
     <uses-sdk android:minSdkVersion="10" />
 	<uses-permission android:name="android.permission.VIBRATE"/>
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".MemoryCoconutActivity"
-                  android:label="@string/app_name"
-                  android:theme="@style/CocoTheme">
+        <activity android:name=".SplashActivity">
+                  
+                  >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MemoryCoconutActivity"
+                  android:label="@string/app_name"
+                  android:theme="@style/CocoTheme"></activity>
 	<activity android:name=".NoteEdit"
 	          android:theme="@style/CocoTheme"></activity>
 	<activity android:name=".AcercaDeActivity"
