--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,7 +16,7 @@
         </activity>
         <activity android:name=".MemoryCoconutActivity"
                   android:label="@string/app_name"
-                  android:theme="@style/CocoTheme"></activity>
+                  android:theme="@style/CocoTheme2"></activity>
 	<activity android:name=".NoteEdit"
 	          android:theme="@style/CocoTheme"></activity>
 	<activity android:name=".AcercaDeActivity"
