--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,29 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="es.upm.dit"
-      android:versionCode="1"
-      android:versionName="1.0">
+    package="es.upm.dit"
+    android:versionCode="1"
+    android:versionName="1.0" >
+
     <uses-sdk android:minSdkVersion="10" />
-	<uses-permission android:name="android.permission.VIBRATE"/>
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".SplashActivity">
-                  
+
+    <uses-permission android:name="android.permission.VIBRATE" />
+
+    <application
+        android:icon="@drawable/icon"
+        android:label="@string/app_name" >
+        <activity android:name=".SplashActivity" >
                   >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MemoryCoconutActivity"
-                  android:label="@string/app_name"
-                  android:theme="@style/CocoTheme2"></activity>
-	<activity android:name=".NoteEdit"
-	          android:theme="@style/CocoTheme"></activity>
-	<activity android:name=".AcercaDeActivity"
-	    	  android:theme="@style/CocoTheme"></activity>
-	<activity android:name=".AyudaActivity"
-	    	  android:theme="@style/CocoTheme"></activity>
-	<activity android:name=".NoteView"
-	    	  android:theme="@style/CocoTheme"></activity>
+        <activity
+            android:name=".MemoryCoconutActivity"
+            android:label="@string/app_name"
+            android:theme="@style/CocoTheme2" >
+        </activity>
+        <activity
+            android:name=".NoteEdit"
+            android:theme="@style/CocoTheme" >
+        </activity>
+        <activity
+            android:name=".AcercaDeActivity"
+            android:theme="@style/CocoTheme" >
+        </activity>
+        <activity
+            android:name=".AyudaActivity"
+            android:theme="@style/CocoTheme" >
+        </activity>
+        <activity
+            android:name=".NoteView"
+            android:theme="@style/CocoTheme" >
+        </activity>
     </application>
+
 </manifest>
